# eo-insights

./: .gitignore  NOTICE  README.md  environment.yml  environment_fixed.yml  pyproject.toml
dataset_configuration/: digital_earth_australia_stac.toml
dataset_configuration/digital_earth_africa_stac/: digital_earth_africa_stac.toml
dataset_configuration/digital_earth_australia_stac/: digital_earth_australia_stac.toml
dataset_configuration/element84_stac/: element_84_stac.toml
notebooks/: Native_species_habitat_prediction_demo.ipynb  README.md  band_indices_demo.ipynb  configuration_demo.ipynb  id_load_demo.ipynb  load_demo.ipynb  load_ls_fc_demo.ipynb  machine_learning_habitat_mapping_demo.ipynb  machine_learning_species_mapping_demo.ipynb  masking_demo.ipynb  ml_mdba_demo.ipynb  spatial_tools_demo.ipynb  stac_catalog_demo.ipynb  stac_catalogue_demo.ipynb
notebooks/data/habitat_mapping/: habitat_mapping_southern_bell_frog.geojson
notebooks/data/species_mapping/: species_mapping_victoria.geojson  species_mapping_victoria_train_test_areas.geojson
src/eo_data_tools/: masking.py  raster_base.py  stac_configuration.py
src/eo_insights/: band_indices.py  masking.py  raster_base.py  spatial.py  stac_configuration.py  stac_utils.py  ui.py  utils.py
src/eo_insights/dataset_configuration/: digital_earth_africa_stac.toml  digital_earth_australia_stac.toml  element_84_stac.toml  nasa_lpcloud_stac.toml
src/remote_sensing_tools/: band_indices.py  config.py  data.py  masking.py  raster_base.py  stac_config.py  stac_configuration.py  stac_utils.py
