[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "remote_sensing_tools"
version = "0.0.1"
authors = [
  { name="Caitlin Adams", email="cadams@frontiersi.com.au" },
]
description = "Tools for remote sensing analysis"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
  "black>=24.4.2",
  "dask[diagnostics]>=2024.5.2",
  "dask-image>=2024.5.3",
  "ipykernel>=6.29.4",
  "matplotlib>=3.9.0",
  "mypy>=1.10.0",
  "odc-stac>=0.3.9",
  "pylint>=3.2.2",
  "pystac-client>=0.8.2",
  "scikit-image>=0.23.2",
  "rasterstats>=0.19.0",
  "geopandas>=0.14.4",
  "scikit-learn>=1.5.0"
]

[project.urls]
Homepage = "https://github.com/frontiersi/remote-sensing-tools"
Issues = "https://github.com/frontiersi/remote-sensing-tools/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
remote_sensing_tools = ["py.typed"]